--- a/app/sass/small/_global.scss
+++ b/app/sass/small/_global.scss
@@ -13,9 +13,15 @@ html{
   overflow: scroll;
   overflow-x: hidden;
   min-height: 100%;
+  height: 100%;
 
   body{
-    background: grey;
+    height: 100%;
     font-size: $fontSizeSmall;
+    font-family: 'Roboto', Arial, sans-serif;
   }
+}
+
+h1, h2, h3, h4, h5{
+  font-family: 'Open Sans', Arial, sans-serif;
 }
