--- a/app/sass/_settings.scss
+++ b/app/sass/_settings.scss
@@ -3,3 +3,9 @@ $fontSizeSmall: 14px;
 
 //Colors
 $green: #01A56E;
+$green2:  #006738;
+$green2Dark: #00512c;
+$yellow: #F1Ae42;
+$yellowDark: #d79b3b;
+$red: #DA534B;
+$redDark: #b0433d;
