--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -9,3 +9,5 @@
 @import 'small/global';
 @import 'small/questionnaires';
 @import 'small/signup';
+@import 'small/dashboard';
+@import 'small/menu';
